force-app/main/default/objects/Opportunity/fields/Account_Associate__c.field-meta.xml
<CustomField>
    <fullName>Account_Associate__c</fullName>
    <description>The Associate Sales Rep on the Account</description>
    <formula>Account.Associate_Rep__r.Name</formula>
    <label>Account Associate</label>
    <type>Text</type>
</CustomField>