force-app/main/default/objects/Opportunity/fields/Account_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer__c</fullName>
    <description>Field that will be updated by workflow to hold the customer # related to this opportunity - No longer used in SmartConnect - Used anywhere else?? I think it was a sports turf thing</description>
    <label>Account Customer # (Do Not Use)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>