force-app/main/default/objects/Opportunity/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <description>Used for Merge Fields</description>
    <formula>Account.Customer_Name__c</formula>
    <label>Account Name Text</label>
    <type>Text</type>
</CustomField>