force-app/main/default/objects/Opportunity/fields/Account_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Account_On_Hold__c</fullName>
    <description>Account is On Hold (Please contact Credit with Questions from the Account Page)</description>
    <formula>Account.On_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account is On Hold (Please contact Credit with Questions from the Account Page)</inlineHelpText>
    <label>On Hold?</label>
    <type>Checkbox</type>
</CustomField>