force-app/main/default/objects/Opportunity/fields/Account_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Rep__c</fullName>
    <description>The Primary Sales Rep on the Account</description>
    <formula>Account.Sales_Rep__r.Name</formula>
    <label>Account Rep</label>
    <type>Text</type>
</CustomField>