force-app/main/default/objects/Opportunity/fields/Activate_Conga_Trigger_Email_Quote__c.field-meta.xml
<CustomField>
    <fullName>Activate_Conga_Trigger_Email_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to activate the Conga Trigger to Email the PDF Quote.</description>
    <label>Activate Conga Trigger Email Quote</label>
    <type>Checkbox</type>
</CustomField>