force-app/main/default/objects/Opportunity/fields/Age_Division__c.field-meta.xml
<CustomField>
    <fullName>Age_Division__c</fullName>
    <inlineHelpText>The age division for this field</inlineHelpText>
    <label>Age Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>