force-app/main/default/objects/Opportunity/fields/Alternate_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Pay_Type__c</fullName>
    <description>Used if the Customer wants to pay a single Invoice separately from their Terms.</description>
    <inlineHelpText>Use this if the Customer is on Terms, but would like to pay for this Order separately from those Terms.</inlineHelpText>
    <label>Alternate Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COD/CASH</fullName>
            </value>
            <value>
                <fullName>COD/CC</fullName>
            </value>
            <value>
                <fullName>COD/CK</fullName>
            </value>
            <value>
                <fullName>THIRD PARTY FINANCING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>