force-app/main/default/objects/Opportunity/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Set in Opportunity Process builder Sports Turf Opportunity Stage Change Email Alert</description>
    <inlineHelpText>How long the current quote is good through</inlineHelpText>
    <label>Valid Through</label>
    <type>Date</type>
</CustomField>