force-app/main/default/objects/Opportunity/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <description>Who approved quote set in process builder email alert</description>
    <label>Approved By:</label>
    <length>128</length>
    <type>Text</type>
</CustomField>