force-app/main/default/objects/Opportunity/fields/AR_VIEW__c.field-meta.xml
<CustomField>
    <fullName>AR_VIEW__c</fullName>
    <description>Indicates if the current User is the Opp owner or associate rep</description>
    <formula>IF(  Owner.Id  = $User.Id , true, IF(  Account.Associate_Rep__r.OwnerId = $User.Id,true,false))</formula>
    <label>AR VIEW</label>
    <type>Checkbox</type>
</CustomField>