force-app/main/default/objects/Opportunity/fields/ATS_Shipping_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ATS_Shipping_Schedule__c</fullName>
    <description>Link to ATS Shipping Schedule in Google Drive</description>
    <formula>HYPERLINK(&quot;https://drive.google.com/file/d/1NMlSRmakkHaI_N0zBqrL8A1HWE145bBf/view&quot;, &quot;Open ATS Shipping Schedule in New Tab&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATS Shipping Charges:</label>
    <type>Text</type>
</CustomField>