force-app/main/default/objects/Opportunity/fields/ATS_Shipping_Total__c.field-meta.xml
<CustomField>
    <fullName>ATS_Shipping_Total__c</fullName>
    <description>Total Line Items on the Opportunity that are for ATS Shipping/Delivery</description>
    <inlineHelpText>Total Line Items on the Opportunity that are for ATS Shipping/Delivery</inlineHelpText>
    <label>ATS Shipping $</label>
    <summarizedField>Opportunity_Product__c.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity_Product__c.ATS_Product__c</field>
        <operation>equals</operation>
        <value>a0A4100000GiqekEAB</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>