force-app/main/default/objects/Opportunity/fields/BH_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>BH_Yes_No__c</fullName>
    <description>Starting EOP 2022 we use this vs the original Bill and Hold check box. Reason being that if the checkbox always has a value of negative. So trying to require user input would be difficult if the order was not bill and hold because the user would say false.</description>
    <label>Bill and Hold?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>