force-app/main/default/objects/Opportunity/fields/Bill_and_Hold__c.field-meta.xml
<CustomField>
    <fullName>Bill_and_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill and Hold (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>