force-app/main/default/objects/Opportunity/fields/Bill_Hold__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill &amp; Hold? (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>