force-app/main/default/objects/Opportunity/fields/Bill_Hold_Signed__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold_Signed__c</fullName>
    <description>Used in CPQ to vaildate Bill and Hold orders have signed agreement</description>
    <formula>Account.Storage_Agreement_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill &amp; Hold Signed?</label>
    <type>Checkbox</type>
</CustomField>