force-app/main/default/objects/Opportunity/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Account.BillingStreet &amp; br() &amp; Account.BillingCity &amp; &quot;, &quot; &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode</formula>
    <inlineHelpText>Please contact your Credit Rep using Chatter if Billing Changes need to be made.</inlineHelpText>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>