force-app/main/default/objects/Opportunity/fields/Bypass_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Flows to be able to bypass Validation Rules to be able to update Records as needed.</description>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>