force-app/main/default/objects/Opportunity/fields/BypassAutomationDateTime__c.field-meta.xml
<CustomField>
    <fullName>BypassAutomationDateTime__c</fullName>
    <description>Used to be able to bypass Validation Rules when using Flows.</description>
    <label>BypassAutomationDateTime</label>
    <type>DateTime</type>
</CustomField>