force-app/main/default/objects/Opportunity/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <description>Used to put the Contact Phone Number on the PDF using Conga Composer</description>
    <formula>Contact__r.Phone</formula>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>