force-app/main/default/objects/Opportunity/fields/CPQ_Product_Total__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Total__c</fullName>
    <description>Used to calculate the total of only Products, and does not include shipping</description>
    <formula>Amount -  Shipping_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>