force-app/main/default/objects/Opportunity/fields/Credit_App_Completed__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the customer complete a credit application?</inlineHelpText>
    <label>Credit App Completed?</label>
    <type>Checkbox</type>
</CustomField>