force-app/main/default/objects/Opportunity/fields/Custom_Seed_Request__c.field-meta.xml
<CustomField>
    <fullName>Custom_Seed_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Seed Request</label>
    <type>Checkbox</type>
</CustomField>