force-app/main/default/objects/Opportunity/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Used to hold the Customer #, and have it sent to SalesPad via SmartConnect.</description>
    <formula>Account.Customer__c</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>