force-app/main/default/objects/Opportunity/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <inlineHelpText>Customer PO Number for the Order (if applicable)</inlineHelpText>
    <label>Customer PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>