force-app/main/default/objects/Opportunity/fields/Delivery_Date_s_Requested__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_s_Requested__c</fullName>
    <label>Delivery Date(s) Requested - From</label>
    <type>Date</type>
</CustomField>