force-app/main/default/objects/Opportunity/fields/Did_Conga_Trigger_Fire__c.field-meta.xml
<CustomField>
    <fullName>Did_Conga_Trigger_Fire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Admins to determine if the Conga Trigger Solution ran or not.</description>
    <label>Did Conga Trigger Fire?</label>
    <type>Checkbox</type>
</CustomField>