force-app/main/default/objects/Opportunity/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>A discount percentage to be applied to the entire order (typically during Early Order Promotions)</description>
    <inlineHelpText>A discount percentage to be applied to the entire order (typically during Early Order Promotions)</inlineHelpText>
    <label>Discount %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>