force-app/main/default/objects/Opportunity/fields/Dropship_Preferred_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Preferred_Trailer__c</fullName>
    <label>Dropship Preferred Trailer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Flatbed</fullName>
            </value>
            <value>
                <fullName>ATS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>