force-app/main/default/objects/Opportunity/fields/DS_Fertilizer__c.field-meta.xml
<CustomField>
    <fullName>DS_Fertilizer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DS- Fertilizer</label>
    <type>Checkbox</type>
</CustomField>