force-app/main/default/objects/Opportunity/fields/DS_Opportunity_Found__c.field-meta.xml
<CustomField>
    <fullName>DS_Opportunity_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DS- Opportunity Found</label>
    <type>Checkbox</type>
</CustomField>