force-app/main/default/objects/Opportunity/fields/Early_Order__c.field-meta.xml
<CustomField>
    <fullName>Early_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is an Early Order (EOP) Sales Opportunity</description>
    <inlineHelpText>Indicates if this is an Early Order (EOP) Sales Opportunity</inlineHelpText>
    <label>Early Order?</label>
    <type>Checkbox</type>
</CustomField>