force-app/main/default/objects/Opportunity/fields/Early_Pay__c.field-meta.xml
<CustomField>
    <fullName>Early_Pay__c</fullName>
    <description>Indicates if Early Pay should be applied to this order (will reflect on the Sales Invoice in Salespad)</description>
    <inlineHelpText>Indicates if Early Pay should be applied to this order (will reflect on the Sales Invoice in Salespad)</inlineHelpText>
    <label>Early Pay?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>