force-app/main/default/objects/Opportunity/fields/Email_PDF_Quote__c.field-meta.xml
<CustomField>
    <fullName>Email_PDF_Quote__c</fullName>
    <description>##Conga created button:00b75000000M9ve</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[OppLineItem]0Q_006EAE438384,[OppLineItem2]0Q_008EAE308702,[OppLineItem3]0Q_009EAE356924&quot; + 
&quot;&amp;templateid=0T_020EAC487894&quot; + 
&quot;&amp;congaemailtemplateid=0E_003EAE636084&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;ds2=0&quot; + 
&quot;&amp;ds3=1&quot; + 
&quot;&amp;ds4=1&quot; + 
&quot;&amp;ds5=1&quot; + 
&quot;&amp;ds6=1&quot; + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;fp0=1&quot; + 
&quot;&amp;dc=&quot; + IF(OR(ISPICKVAL(StageName, &quot;Closed Won&quot;),ISPICKVAL(StageName, &quot;Quote&quot;)), &quot;0&quot;, &quot;1&quot;) +
&quot;&amp;dcl=The Opportunity must be in the Quote Stage to Email a PDF!&quot; + 
&quot;&amp;emailtoid=&quot; + Contact__c +
&quot;&amp;ofn=Advanced Turf Solutions - &quot; + Account_Name_Text__c + &quot; - Quote &quot; + Quote_Number_Text__c +
&quot;&amp;sc1=SalesforceFile&quot;</formula>
    <label>Email PDF Quote</label>
    <type>Text</type>
</CustomField>