force-app/main/default/objects/Opportunity/fields/EOP_Order__c.field-meta.xml
<CustomField>
    <fullName>EOP_Order__c</fullName>
    <label>EOP Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>