force-app/main/default/objects/Opportunity/fields/EOP_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>EOP_Pay_Type__c</fullName>
    <label>EOP Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set Due Date</fullName>
            </value>
            <value>
                <fullName>See Split Terms</fullName>
            </value>
            <value>
                <fullName>BASF</fullName>
            </value>
            <value>
                <fullName>Bayer</fullName>
            </value>
            <value>
                <fullName>FMC</fullName>
            </value>
            <value>
                <fullName>SePRO</fullName>
            </value>
            <value>
                <fullName>Envu</fullName>
            </value>
            <value>
                <fullName>C.C./COD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>