force-app/main/default/objects/Opportunity/fields/ERP_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Quote_Id__c</fullName>
    <description>Used to link opportunity with quote in SalesPad</description>
    <externalId>true</externalId>
    <label>ERP Quote ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>