force-app/main/default/objects/Opportunity/fields/Est_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_End_Date__c</fullName>
    <formula>Target_Start_Date__c +  Anticipated_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est End Date</label>
    <type>Date</type>
</CustomField>