force-app/main/default/objects/Opportunity/fields/Est_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Ship_Date__c</fullName>
    <description>Used on List View - Shorter Name</description>
    <formula>Delivery_Date_s_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Ship Date</label>
    <type>Date</type>
</CustomField>