force-app/main/default/objects/Opportunity/fields/Estimated_Weight__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Weight__c</fullName>
    <label>Estimated Weight</label>
    <summarizedField>OpportunityLineItem.Ship_Weight__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>