force-app/main/default/objects/Opportunity/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date the opportunity quote is good through. It is added to quip on quote approval. Set at 60 days per Randy&apos;s request</description>
    <formula>CreatedDate + 14</formula>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>