force-app/main/default/objects/Opportunity/fields/External_Multiple_Quip_Quote__c.field-meta.xml
<CustomField>
    <fullName>External_Multiple_Quip_Quote__c</fullName>
    <label>External Multiple Quip Quote</label>
    <type>Url</type>
</CustomField>