force-app/main/default/objects/Opportunity/fields/External_Quip_Quote__c.field-meta.xml
<CustomField>
    <fullName>External_Quip_Quote__c</fullName>
    <description>Quip Template for the External/Customer Quote</description>
    <label>External Quip Quote</label>
    <type>Url</type>
</CustomField>