force-app/main/default/objects/Opportunity/fields/Fertilizer_Supplier4__c.field-meta.xml
<CustomField>
    <fullName>Fertilizer_Supplier4__c</fullName>
    <label>Fertilizer Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fertilizer_Supplier</valueSetName>
    </valueSet>
</CustomField>