force-app/main/default/objects/Opportunity/fields/Field_Location__c.field-meta.xml
<CustomField>
    <fullName>Field_Location__c</fullName>
    <description>The location of the field for the evaluation</description>
    <label>Field Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>