force-app/main/default/objects/Opportunity/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <inlineHelpText>The type of field being evaluated</inlineHelpText>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Softball</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>