force-app/main/default/objects/Opportunity/fields/Find_in_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Find_in_CPQ__c</fullName>
    <description>Link to search for the Opportunity in CPQ (only for Quotes Submitted as Orders)</description>
    <inlineHelpText>Link to search for the Opportunity in CPQ (only for Quotes Submitted as Orders)</inlineHelpText>
    <label>Find in CPQ</label>
    <type>Url</type>
</CustomField>