force-app/main/default/objects/Opportunity/fields/FM_User__c.field-meta.xml
<CustomField>
    <fullName>FM_User__c</fullName>
    <formula>Warehouse__r.FM_View__c</formula>
    <label>FM User?</label>
    <type>Checkbox</type>
</CustomField>