force-app/main/default/objects/Opportunity/fields/FOB_Amount2__c.field-meta.xml
<CustomField>
    <fullName>FOB_Amount2__c</fullName>
    <label>FOB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>