force-app/main/default/objects/Opportunity/fields/Focus_Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product_Amount__c</fullName>
    <label>Focus Product Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>