force-app/main/default/objects/Opportunity/fields/Freight_Amount_4__c.field-meta.xml
<CustomField>
    <fullName>Freight_Amount_4__c</fullName>
    <label>Freight Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>