force-app/main/default/objects/Opportunity/fields/Freight_Completed__c.field-meta.xml
<CustomField>
    <fullName>Freight_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Completed</label>
    <type>Checkbox</type>
</CustomField>