force-app/main/default/objects/Opportunity/fields/Freight_Date_Valid__c.field-meta.xml
<CustomField>
    <fullName>Freight_Date_Valid__c</fullName>
    <formula>IF( Freight_Expiration_Date__c &lt; Today(), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Date Valid</label>
    <type>Checkbox</type>
</CustomField>