force-app/main/default/objects/Opportunity/fields/Freight_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Freight_Expiration_Date__c</fullName>
    <label>Freight Expiration Date</label>
    <type>Date</type>
</CustomField>