force-app/main/default/objects/Opportunity/fields/Freight_Price_Updated__c.field-meta.xml
<CustomField>
    <fullName>Freight_Price_Updated__c</fullName>
    <label>Freight Price Updated</label>
    <type>Date</type>
</CustomField>