force-app/main/default/objects/Opportunity/fields/Generate_Hazmat_PDF__c.field-meta.xml
<CustomField>
    <fullName>Generate_Hazmat_PDF__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; +  Id  +
&quot;&amp;SC0=1&quot;+
&quot;&amp;SC1=salesforcefile&quot; +
&quot;&amp;QueryId=[HazMat]0Q_020EAC826106,[OppLineItem]0Q_006EAC868745,[Ship]0Q_019EAC645985&quot; +
&quot;&amp;TemplateId=0T_031EAC856728,0T_032EAC931101&quot; +
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;emailtoid=0056T000007eFU7QAM&quot; +
&quot;&amp;Emailcc=&quot;+  Warehouse_Order_Notification_Group__c  +
&quot;&amp;EmailReplyToId=0052M00000AnqxTQAR&quot; +
&quot;&amp;CongaEmailTemplateId=0E_009EAC386111&quot; +
&quot;&amp;QMode=3&quot; +
&quot;&amp;DS7=12&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Hazmat PDF</label>
    <type>Text</type>
</CustomField>