force-app/main/default/objects/Opportunity/fields/Generate_Hazmat_URL__c.field-meta.xml
<CustomField>
    <fullName>Generate_Hazmat_URL__c</fullName>
    <formula>&quot;https://advancedturf.lightning.force.com/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_370 + Generate_Hazmat_PDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Hazmat URL</label>
    <type>Text</type>
</CustomField>