force-app/main/default/objects/Opportunity/fields/Generate_PDF_Quote__c.field-meta.xml
<CustomField>
    <fullName>Generate_PDF_Quote__c</fullName>
    <description>##Conga created button:00b75000000M9QL
##Conga updated button:00b75000000M9QL
##Conga updated button:00b2M000002QK2C</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[OppLineItem]0Q_006EAC868745,[OppLineItem2]0Q_007EAC571956,[OppLineItem3]0Q_008EAC377528&quot; + 
&quot;&amp;templateid=0T_020EAC487894&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;ds2=1&quot; + 
&quot;&amp;ds3=1&quot; + 
&quot;&amp;ds4=1&quot; + 
&quot;&amp;ds5=1&quot; + 
&quot;&amp;ds6=1&quot; + 
&quot;&amp;qmode=SalesforceFile&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;fp0=1&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;dc=&quot; + IF(OR(ISPICKVAL(StageName, &quot;Closed Won&quot;),ISPICKVAL(StageName, &quot;Quote&quot;)), &quot;0&quot;, &quot;1&quot;) +
&quot;&amp;dcl=The Opportunity must be in the Quote Stage to generate a PDF!&quot; + 
&quot;&amp;ofn=Advanced Turf Solutions - &quot; + Account_Name_Text__c + &quot; - Quote &quot; + Quote_Number_Text__c +
&quot;&amp;sf1=1&quot;</formula>
    <label>Generate PDF Quote</label>
    <type>Text</type>
</CustomField>