force-app/main/default/objects/Opportunity/fields/Generate_PDF_Quote_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Generate_PDF_Quote_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to generate the PDF Quote using Conga Trigger (No longer used)</description>
    <label>Generate PDF Quote Checkbox</label>
    <type>Checkbox</type>
</CustomField>