force-app/main/default/objects/Opportunity/fields/Generate_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Generate_PDF_URL__c</fullName>
    <description>Used with a Flow to allow Sales Reps to generate a PDF at the click of a button.</description>
    <formula>&quot;https://advancedturf.lightning.force.com/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_370 + Generate_PDF_using_Flow__c</formula>
    <label>Generate PDF URL</label>
    <type>Text</type>
</CustomField>