force-app/main/default/objects/Opportunity/fields/GP_Sales_Doc__c.field-meta.xml
<CustomField>
    <fullName>GP_Sales_Doc__c</fullName>
    <inlineHelpText>The Document Number in Salespad/GP</inlineHelpText>
    <label>GP Sales Doc #</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>