force-app/main/default/objects/Opportunity/fields/Hazmat_Order__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in flow to notify sales rep via chatter that order has been submitted to warehouse but because the order contained hazmat materials; they were not included on the initial notification.</description>
    <inlineHelpText>Used in flow to notify sales rep via chatter that order has been submitted to warehouse but because the order contained hazmat materials; they were not included on the initial notification.</inlineHelpText>
    <label>Hazmat Order</label>
    <type>Checkbox</type>
</CustomField>