force-app/main/default/objects/Opportunity/fields/Internal_Order_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Order_Comments__c</fullName>
    <inlineHelpText>Internal Order Comments that the Customer will not see</inlineHelpText>
    <label>Internal Order Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>